# demo-folder-backupper

./: .gitignore  CMakeLists.txt  README.md  main.cpp
FileProcessor/: CMakeLists.txt  FileProcessor.cpp  FileProcessor.h
Test/Test-hot/: testfile1  testfile2
Utils/: Utils.cpp  Utils.h
